-spacing issue fix

--- a/src/assets/scss/portfolio/_portfolio.scss
+++ b/src/assets/scss/portfolio/_portfolio.scss
@@ -31,8 +31,8 @@
         }
 
         .welcome-card-section {
-            margin: 5rem 0 2rem;
-            padding: 4.4rem 4.8rem;
+            margin: 5rem 0 1rem;
+            padding: 4rem 4.8rem;
             // width: 89.6rem;
             background-color: $secondary;
             box-shadow: 0px 0.4rem 1rem rgba(0, 0, 0, 0.04), 0px 1rem 1rem rgba(0, 0, 0, 0.04);
